pass args from html

--- a/djtest/djtest/test.html
+++ b/djtest/djtest/test.html
@@ -4,7 +4,7 @@
 <script type="text/javascript">
 function test_ajax(){
 $.ajax({
-    url: '/ajax',
+    url: '/ajax?name=test',
     dataType : 'json',
     cache: false,
     success: function(data) {
